<resources>

    <string name="ExpandTextButton">A</string>
    <string name="StartingZoomSize">100%</string>
    <string name="dailyAlertsLabel">Daily Alerts</string>
    <string name="addTimeButton">Add Time</string>

    <string name="app_name">BP &amp; G Tracker</string>
    <string name="bpText">Blood Pressure</string>
    <string name="systolicText">Systolic</string>
    <string name="diastolicText">Diastolic</string>
    <string name="glucoseLevelText">Glucose Level</string>
    <string name="forwardSlash">/</string>
    <string name="mmHgHintStr">mmHg</string>
    <string name="mgDLHintStr">mg/dL</string>
    <string name="dateStr">Date</string>
    <string name="dateFillHintStr">MM/DD/YY</string>
    <string name="calendarStr">Calendar</string>
    <string name="timeStr">Time</string>
    <string name="timeHintStr">HH:MM:SS</string>
    <string name="notesHintStr">Notes</string>
    <string name="pick_time">Set Time</string>
    <string name="pick_date">Set Date</string>
    <string name="promptEntry">Add an Entry</string>
    <string name="pressureButton">Blood Pressure</string>
    <string name="glucoseButton">Glucose</string>
    <string name="logButton">Log</string>
    <string name="makeEntryButton">Make Entry</string>
    <string name="reminderButton">Reminders</string>
    <string name="title_activity_log_display">LogDisplay</string>
    <string name="tab_text_1">Blood Pressure</string>
    <string name="tab_text_2">Glucose</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="enter_text">Enter text</string>
    <string name="dateset">date</string>
    <string name="HourShort">Hr</string>
    <string name="MinuteShort">Min</string>
    <string name="colon">:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="title_activity_navigation">Title activity navigation</string>
    <string name="first_fragment">First fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="title_home">Title home</string>
    <string name="title_dashboard">Title dashboard</string>
    <string name="title_notifications">Title notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="table_delete_check">Are you sure you want to delete this entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="swipe_instructions">Swipe right on a row to delete the entry.</string>
</resources>