<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table"
    android:stretchColumns="1,2,3,4,5"
    android:layout_margin="8dp">

    <TableRow>
        <TextView
            android:text="@string/dateStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/timeStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/systolicText"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/diastolicText"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/notesHintStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bp_delete"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_delete_button_foreground"
        android:contentDescription="@+id/bp_delete" />

</TableLayout>