<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Table"
    android:stretchColumns="1,2,3,4,5"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10h">

        <Button
            android:id="@+id/bloodPressureToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/pink"
            android:text="@string/bpText"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <Button
            android:id="@+id/glucoseToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/glucoseButton"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/gText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_blue_border"
        android:text="@string/glucoseButton"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/swipe_instructions"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"/>

    <TableRow>
        <TextView
            android:text="@string/dateStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/timeStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/glucoseLevelText"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
        <TextView
            android:text="@string/notesHintStr"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="0dp"
            android:layout_column="1"
            />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</TableLayout>