<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:fadeScrollbars="true"
    android:fadingEdge="horizontal|vertical"
    tools:context=".BPEntry">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/forwardSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forwardSlash"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/diastolicNum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/systolicNum"
        app:layout_constraintTop_toBottomOf="@+id/diastolicText" />

    <TextView
        android:id="@+id/bpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_border"
        android:fadingEdge="horizontal|vertical"
        android:padding="20dp"
        android:text="@string/bpText"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/heartImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpText"
        app:srcCompat="@drawable/blood_pressure" />

    <TextView
        android:id="@+id/systolicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/systolicText"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartImage" />

    <TextView
        android:id="@+id/diastolicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/diastolicText"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartImage" />

    <EditText
        android:id="@+id/systolicNum"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mmHgHintStr"
        android:inputType="numberDecimal"
        android:onClick="systolicLevelCheck"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systolicText" />

    <EditText
        android:id="@+id/diastolicNum"
        android:layout_width="138dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mmHgHintStr"
        android:inputType="numberDecimal"
        android:onClick="diastolicLevelCheck"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diastolicText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/dateStr"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systolicNum" />

    <ImageView
        android:id="@+id/calendarImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/calendarStr"
        app:layout_constraintEnd_toEndOf="@+id/diastolicNum"
        app:layout_constraintStart_toStartOf="@+id/diastolicNum"
        app:layout_constraintTop_toBottomOf="@+id/diastolicNum"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/timeStr"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/timeStr"
        app:layout_constraintEnd_toEndOf="@+id/calendarImage"
        app:layout_constraintStart_toStartOf="@+id/calendarImage"
        app:layout_constraintTop_toBottomOf="@+id/calendarImage"
        app:srcCompat="@drawable/time" />

    <EditText
        android:id="@+id/notesEdit"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="500dp"
        android:layout_height="230dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/notesHintStr"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />
</androidx.constraintlayout.widget.ConstraintLayout>