<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bloodPressureEntry">


    <TextView
        android:id="@+id/bpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_border"
        android:text="@string/bpText"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/heartImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bpText"
        app:layout_constraintEnd_toEndOf="@+id/bpText"
        app:layout_constraintStart_toStartOf="@+id/bpText"
        app:layout_constraintTop_toBottomOf="@+id/bpText"
        app:srcCompat="@drawable/blood_pressure" />

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heartImage">

        <TextView
            android:id="@+id/systolicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="50dp"
            android:text="@string/systolicText"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="@id/horizontalLayout"
            app:layout_constraintTop_toTopOf="@+id/horizontalLayout" />

        <TextView
            android:id="@+id/diastolicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/diastolicText"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalLayout" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout">

        <EditText
            android:id="@+id/systolicNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:autofillHints=""
            android:hint="@string/mmHgHintStr"
            android:inputType="numberDecimal"
            android:onClick="systolicLevelCheck"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/horizontalLayout"
            app:layout_constraintTop_toTopOf="@+id/horizontalLayout"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/forwardSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/forwardSlash"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="@id/horizontalLayout"
            app:layout_constraintTop_toTopOf="@+id/horizontalLayout" />

        <EditText
            android:id="@+id/diastolicNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:autofillHints=""
            android:hint="@string/mmHgHintStr"
            android:inputType="numberDecimal"
            android:onClick="diastolicLevelCheck"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/horizontalLayout"
            app:layout_constraintTop_toTopOf="@+id/horizontalLayout"  />

    </LinearLayout>

    <TextView
        android:id="@+id/DateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/dateStr"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/horizontalLayout"
        app:layout_constraintTop_toBottomOf="@id/horizontalLayout2">
    </TextView>

    <ImageView
        android:id="@+id/calendarImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/calendarStr"
        app:layout_constraintEnd_toEndOf="@id/horizontalLayout"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout2"
        app:srcCompat="@drawable/calendar" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintStart_toStartOf="@id/DateText"
        app:layout_constraintTop_toBottomOf="@+id/DateText" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/timeStr"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/DateText"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintStart_toStartOf="@id/DateText"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/timeStr"
        app:layout_constraintEnd_toEndOf="@+id/calendarImage"
        app:layout_constraintStart_toStartOf="@+id/calendarImage"
        app:layout_constraintTop_toBottomOf="@+id/calendarImage"
        app:srcCompat="@drawable/time" />

    <EditText
        android:id="@+id/notesEdit"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:autofillHints=""
        android:hint="@string/notesHintStr"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/AddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/HomeButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logButton"
        android:onClick="goToLog"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        app:layout_constraintEnd_toEndOf="@+id/guideline30"
        app:srcCompat="@drawable/home_button_foreground" />

    <ImageButton
        android:id="@+id/AddButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/makeEntryButton"
        android:onClick="goToAddEntry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        app:srcCompat="@drawable/add_button_foreground" />

    <ImageButton
        android:id="@+id/BellButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/reminderButton"
        android:onClick="goToReminders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline70"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        app:srcCompat="@drawable/bell_button_foreground" />

    <TextView
        android:id="@+id/percentZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartingZoomSize"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Upscale" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>