<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/table_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:textSize="50dp"
        android:textAlignment="center"
        android:text="@string/table_delete_check"
        android:paddingBottom="0dp"
        android:paddingTop="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <ImageView
        android:id="@+id/reminders_delete"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:contentDescription="@+id/reminders_edit"
        android:src="@drawable/ic_delete_button_foreground" />

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/yes"
            android:textColor="@color/yes_red"
            android:textSize="50sp" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/no"
            android:textColor="@color/no_blue"
            android:textSize="50sp" />

    </LinearLayout>

</LinearLayout>